--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
 		<spring.version>5.1.2.RELEASE</spring.version>
 		<junit.version>4.11</junit.version>
 		<log4j.version>1.2.17</log4j.version>
-		<sonar.host.url>http:172.31.8.28:9000/</sonar.host.url>
+		<sonar.host.url>http:http://18.212.18.170:5000/</sonar.host.url>
 		<sonar.login>admin</sonar.login>
 		<sonar.password>admin</sonar.password>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -103,7 +103,7 @@
 	    <snapshotRepository>
 	      <id>nexus</id>
 	      <name>Landmark Technologies Snapshot Nexus Repository </name>
-	      <url>http://35.183.119.82:8081/repository/pay-fintech-snapshot/</url>
+	      <url>http://18.212.18.170:2000/content/repositories/ebay_bts_snapshot/</url>
 	    </snapshotRepository>
 	    
 	</distributionManagement>
